# crimex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
crimex/: __main__.py  bundle.py  cli.py  config.py  hashing.py  io.py  manifest.py  qa.py  receipt.py  run.py  schemas.py  validate.py  verify_run.py
crimex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crimex/connectors/: bjs_ncvs.py  fbi_cde.py
crimex/derive/: rates.py
crimex/normalize/: common.py  fbi_normalize.py  ncvs_normalize.py
crimex/report/: csv_out.py  markdown.py
crimex/ui/: __init__.py  server.py
docs/: SMOKE.md
schemas/: fact-1.0.json  query_spec-1.0.json  run_manifest-1.0.json
specs/: fbi_violent_crime_trend.json  ncvs_violent_victimization_by_race.json  smoke.json
tests/: test___main___coverage.py  test___main___module.py  test_bundle.py  test_bundle_error_branches.py  test_bundle_more_coverage.py  test_cli_argparse_and_run_errors.py  test_cli_branch_edges.py  test_cli_error_branches.py  test_cli_error_paths.py  test_cli_extra_branches.py  test_cli_more_coverage.py  test_cli_qa_fail.py  test_cli_qa_pass.py  test_config_branches.py  test_coverage_boost.py  test_coverage_boost_run.py  test_coverage_gate.py  test_coverage_more.py  test_fbi_retry_fallback.py  test_governed_runs.py  test_hashing.py  test_integration.py  test_ncvs_connector_params.py  test_ncvs_normalize_edges.py  test_normalize.py  test_qa.py  test_qa_more_coverage.py  test_receipts.py  test_schemas.py  test_targeted_coverage.py  test_ui_phase0.py  test_verify_run.py
tests/fixtures/: fbi_meta.json  fbi_raw.json  ncvs_meta.json  ncvs_raw.json
